--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ default = ["console_error_panic_hook"]
 wasm-bindgen = "0.2.63"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.4"
+rand = "0.8"
+getrandom = { version = "0.2", features = ["js"] }
+web-sys = { version = "0.3", features = ["console"] }
+csv = "1.1"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
