--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 indexmap = { version = "2.12.1", features = ["serde"] }
 wasm-bindgen-futures = "0.4.55"
+reqwest = { version = "0.12.24", features = ["json"] }
+gloo-net = "0.6.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
